scripts/kubernetes/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sele-party-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: sweet.sele.warender.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: denisse-party-svc
            port:
              number: 80
